hard-gists/5326379/run.log
=== Docker Run Log for 5326379 ===
Started at: Mi 29. Okt 15:36:32 CET 2025

[2025-10-29 15:36:32] START: Running container for 5326379
[2025-10-29 15:36:32] SUCCESS: Container 9b4633065a9768b63fc72099ef303af6078dbdab5173ab8652662acbdb4e6956 started for 5326379
=== Container logs for 5326379 ===
  File "/snippet.py", line 68
    if show_output: print "%-60s" % msg,
                    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5326379 ===
[2025-10-29 15:36:35] INFO: Container 9b4633065a9768b63fc72099ef303af6078dbdab5173ab8652662acbdb4e6956 has stopped
